--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-	"//1": "describes your app and its dependencies",
-	"//2": "https://docs.npmjs.com/files/package.json",
-	"//3": "updating this file will download and update your packages",
-	"name": "FCC-Advanced-Node-and-Express",
+	"name": "fcc-advanced-node-and-express",
 	"author": "http://github.com/JosephLivengood",
 	"version": "0.0.1",
 	"description": "What am I about?",
@@ -11,14 +8,14 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.18.3",
+		"cors": "^2.8.4",
 		"express": "^4.14.1",
-		"cors": "^2.8.1",
-		"body-parser": "^1.16.0",
-		"mongodb": "^2.2.22",
-		"helmet": "^3.4.0"
+		"helmet": "^3.4.0",
+		"mongodb": "^3.1.6"
 	},
 	"engines": {
-		"node": "4.4.3"
+		"node": "8.x"
 	},
 	"repository": {
 		"type": "git",
