--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
+		"dotenv": "^6.1.0",
 		"express": "^4.14.1",
+		"express-session": "^1.15.6",
 		"helmet": "^3.4.0",
 		"mongodb": "^3.1.6",
+		"passport": "^0.4.0",
 		"pug": "^2.0.3"
 	},
 	"engines": {
