--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"bcrypt": "^3.0.1",
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
 		"dotenv": "^6.1.0",
